<?xml version="1.0"?>
<package format="2">
  <name>quantumController</name>
  <version>0.0.0</version>
  <description>The quantumController package</description>
  <maintainer email="sayansreeparia@gmail.com">sayansree</maintainer>
  <license>GNU</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>qt_build</build_depend>

  <build_export_depend>qt_build</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>qt_build</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
